# pool-simulator

./: .gitignore  README.md  pyproject.toml  renderer.py  requirements.txt  scenarios.py
.claude/skills/physics-tdd/: SKILL.md
engine/: main.py
engine/physics/: ball_state.py  event_prediction.py  event_resolution.py  motion_models.py  simulation_state.py  simulator.py  table_state.py  tuneable_constants.py
engine/tests/: test_event_prediction.py  test_event_resolution.py  test_simple_motion_checks.py  test_simulator.py
renderer/: app.py  constants.py  coordinates.py  drawing.py  input_handler.py  recording.py
src/physics/: event_prediction.py  event_queue.py  event_resolution.py  motion_models.py  simulation_state.py  simulator.py  table_state.py  tuneable_constants.py
src/pool_simulator/: main.py  simulator.py
src/pool_simulator/geometry/: ball.py  table.py
src/pool_simulator/physics/: collisions.py  dynamics.py  forces.py
src/pool_simulator/utils/: helpers.py
src/tests/: test_collisions.py  test_dynamics.py  test_simple_motion_checks.py
