[tool.poetry]
name = "pool-simulator"
version = "0.1.0"
description = "A pool simulator that calculates the physics of the game."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"